# frank_wolfe_lab

./: README.md  pyproject.toml
results/: all_layers_histories.json  fw_head_histories.json  imagenet_histories.json
scripts/: plot_results.py
src/fw_core/: types.py
src/fw_core/algorithms/: frank_wolfe.py
src/fw_tf/: __init__.py  constraints.py  data.py  experiments.py  imagenet_fw_head.py  model.py  optimizers.py  training.py
